.metadata/.plugins/org.eclipse.cdt.ui/else2.build.log
00:05:27 **** Incremental Build of configuration Debug for project else2 ****
make all 
Building file: ../else2.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"else2.d" -MT"else2.o" -o "else2.o" "../else2.c"
../else2.c: In function ‘main’:
../else2.c:8:12: warning: format ‘%s’ expects argument of type ‘char *’, but argument 2 has type ‘char (*)[9]’ [-Wformat=]
    scanf("%s",&name);
           ~^  ~~~~~
../else2.c:20:9: error: ‘i’ undeclared (first use in this function)
     if (i==january)
         ^
../else2.c:20:9: note: each undeclared identifier is reported only once for each function it appears in
../else2.c:22:13: warning: too many arguments for format [-Wformat-extra-args]
      printf("you can apply on mondays!",&month);
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../else2.c:4:35: warning: unused variable ‘no’ [-Wunused-variable]
  char name[9],month,a,january,yes,no;
                                   ^~
make: *** [else2.o] Error 1
subdir.mk:18: recipe for target 'else2.o' failed
"make all" terminated with exit code 2. Build might be incomplete.

00:05:27 Build Failed. 3 errors, 3 warnings. (took 68ms)

